# trajprompt

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: dark_vessel_demo.ipynb
paper/: main.tex  refs.bib
scripts/: download_ais_dma.sh
space/: README.md  mapbox_app.py  requirements.txt
src/trajprompt/: __init__.py  sam2_chip.py  tgard.py  traj_clip.py
src/trajprompt/training/: train.py
tests/: test_smoke.py  test_tgard.py  test_traj_clip.py
