[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajprompt"
version = "0.1.0"
description = "Open-vocabulary maritime intelligence: text-prompt search over AIS + Sentinel-2."
authors = [{name = "Arun Sharma", email = "arun08sharma@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "shapely>=2.0",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "tqdm>=4.66",
  "huggingface_hub>=0.24",
  "transformers>=4.45",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]
space = ["gradio>=4.40", "folium>=0.17", "branca>=0.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
